sts-mock/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Deploys the STS mock service including ECS, ALB, and API Gateway

Parameters:
  Environment:
    Description: The environment type
    Type: String
    AllowedValues:
      - dev
      - build
      - integration
    Default: dev

  LegacyVpcStackName:
    Description: The name of the stack that defines the legacy VPC in which this container will run - soon to be depracted
    Type: String
    Default: vpc

  MigrationSpokeVpcStackName:
    Description: The name of the stack that defines the spoke VPC in which this container will migrated and deployed into.
    Type: String
    Default: spoke-vpc

  PermissionsBoundary:
    Description: The ARN of the permissions boundary to apply when creating IAM roles
    Type: String
    Default: none

  ContainerPort:
    Description: The port on which the container is running
    Type: Number
    Default: 8080

Mappings:
  EnvironmentVariables:
    dev:
      CredentialIssuerUrl: example-credential-issuer.wallet-onboarding.dev.account.gov.uk
      SelfUrl: sts-mock.wallet-onboarding.dev.account.gov.uk
      StsMockImageRepositoryArn: arn:aws:ecr:eu-west-2:219494607463:repository/sts-mock-image-repo-containerrepository-ctjqse5shnuf
    build:
      CredentialIssuerUrl: example-credential-issuer.wallet-onboarding.build.account.gov.uk
      SelfUrl: sts-mock.wallet-onboarding.build.account.gov.uk
      StsMockImageRepositoryArn: arn:aws:ecr:eu-west-2:899032468188:repository/sts-mock-image-repo-containerrepository-c47qvuediwmo
    integration:
      CredentialIssuerUrl: example-credential-issuer.wallet-onboarding.integration.account.gov.uk
      SelfUrl: sts-mock.wallet-onboarding.integration.account.gov.uk
      StsMockImageRepositoryArn: arn:aws:ecr:eu-west-2:899032468188:repository/sts-mock-image-repo-containerrepository-c47qvuediwmo

Conditions:
  UsePermissionsBoundary: !Not
    - !Equals
      - !Ref PermissionsBoundary
      - none

  StackNameIsWalletStsMock: !Equals
    - !Ref AWS::StackName
    - wallet-sts-mock

  IsIntegration: !Equals
    - !Ref Environment
    - integration

  DeployLegacyVpcResources: !Or
    - !Equals
      - !Ref Environment
      - dev
    - !Equals
      - !Ref Environment
      - build
    - !Equals
      - !Ref Environment
      - staging
    - !Equals
      - !Ref Environment
      - integration

  DeploySpokeVpcResources: !Or
    - !Equals
      - !Ref Environment
      - dev
    - !Equals
      - !Ref Environment
      - build
    - !Equals
      - !Ref Environment
      - staging
    - !Equals
      - !Ref Environment
      - integration

  MigrateTrafficToSpokeVpc: !Or
    - !Equals
      - !Ref Environment
      - dev
    - !Equals
      - !Ref Environment
      - integration

Transform: AWS::Serverless-2016-10-31

Resources:

  # LEGACY SECURITY GROUPS - to be depracated
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: STS mock load balancer security group
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId: !ImportValue
        Fn::Sub: ${LegacyVpcStackName}-VpcId
    Condition: DeployLegacyVpcResources

  LoadBalancerSecurityGroupEgressToEcsSecurityGroup:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt LoadBalancerSecurityGroup.GroupId
      IpProtocol: tcp
      Description: Egress between the STS mock load balancer and the STS mock ECS security group
      DestinationSecurityGroupId: !GetAtt EcsSecurityGroup.GroupId
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
    Condition: DeployLegacyVpcResources

  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: STS mock ECS security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId: !ImportValue
        Fn::Sub: ${LegacyVpcStackName}-VpcId
    Condition: DeployLegacyVpcResources

  EcsSecurityGroupIngressFromLoadBalancer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: STS mock ECS allows inbound from the STS mock load balancer
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
      GroupId: !GetAtt EcsSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt LoadBalancerSecurityGroup.GroupId
    Condition: DeployLegacyVpcResources

  # SPOKE SECURITY GROUPS
  LoadBalancerSecurityGroupSpoke:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: STS mock load balancer security group - spoke vpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId: !ImportValue
        Fn::Sub: ${MigrationSpokeVpcStackName}-VpcId
    Condition: DeploySpokeVpcResources

  LoadBalancerSecurityGroupEgressToEcsSecurityGroupSpoke:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt LoadBalancerSecurityGroupSpoke.GroupId
      IpProtocol: tcp
      Description: Egress between the STS mock load balancer and the STS mock ECS security group - spoke-vpc
      DestinationSecurityGroupId: !GetAtt EcsSecurityGroupSpoke.GroupId
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
    Condition: DeploySpokeVpcResources

  EcsSecurityGroupSpoke:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: STS mock ECS security group - spoke-vpc
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId: !ImportValue
        Fn::Sub: ${MigrationSpokeVpcStackName}-VpcId
    Condition: DeploySpokeVpcResources

  EcsSecurityGroupIngressFromLoadBalancerSpoke:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: STS mock ECS allows inbound from the STS mock load balancer - spoke-vpc
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
      GroupId: !GetAtt EcsSecurityGroupSpoke.GroupId
      SourceSecurityGroupId: !GetAtt LoadBalancerSecurityGroupSpoke.GroupId
    Condition: DeploySpokeVpcResources

  # ************************************
  # ACCESS LOGS
  ApiGatewayAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Metadata:
      checkov:
        skip:
          - id: CKV_AWS_158
            rule: Ensure that CloudWatch Log Group is encrypted by KMS
            comment: KMS encryption not required as log group will not contain sensitive data.
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-api-gateway-access-logs
      RetentionInDays: 14

  EcsAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Metadata:
      checkov:
        skip:
          - id: CKV_AWS_158
            rule: Ensure that CloudWatch Log Group is encrypted by KMS
            comment: KMS encryption not required as log group will not contain sensitive data.
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}-ecs
      RetentionInDays: 14

  # LEGACY LOAD BALANCER - to be depratcated
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internal
      SecurityGroups:
        - !GetAtt LoadBalancerSecurityGroup.GroupId
      Subnets:
        - !ImportValue
          Fn::Sub: ${LegacyVpcStackName}-PrivateSubnetIdA
        - !ImportValue
          Fn::Sub: ${LegacyVpcStackName}-PrivateSubnetIdB
        - !ImportValue
          Fn::Sub: ${LegacyVpcStackName}-PrivateSubnetIdC
      Type: application
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Sub di-lb-access-logs-${AWS::AccountId}-${AWS::Region}
        - Key: access_logs.s3.prefix
          Value: !Sub sts-mock-${Environment}
        - Key: idle_timeout.timeout_seconds
          Value: 60
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Tags:
        - Key: FMSRegionalPolicy
          Value: false
        - Key: CustomPolicy
          Value: true
    Condition: DeployLegacyVpcResources

  LoadBalancerListenerTargetGroupECS:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: TRUE
      HealthCheckProtocol: HTTP
      HealthCheckPath: /healthcheck
      HealthCheckTimeoutSeconds: 2
      HealthCheckIntervalSeconds: 60
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200-499
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !ImportValue
        Fn::Sub: ${LegacyVpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
    Condition: DeployLegacyVpcResources

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECS
          Type: forward
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Sub '{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}'
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
    Condition: DeployLegacyVpcResources

  LoadBalancerListenerBlockSystemRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref LoadBalancerListener
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values:
            - /system/*
      Actions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: "404"
            ContentType: text/plain
            MessageBody: Not Found
    Condition: DeployLegacyVpcResources

  # SPOKE LOAD BALANCER
  LoadBalancerSpoke:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internal
      SecurityGroups:
        - !GetAtt LoadBalancerSecurityGroupSpoke.GroupId
      Subnets:
        - !ImportValue
          Fn::Sub: ${MigrationSpokeVpcStackName}-PrivateSubnetIdA
        - !ImportValue
          Fn::Sub: ${MigrationSpokeVpcStackName}-PrivateSubnetIdB
        - !ImportValue
          Fn::Sub: ${MigrationSpokeVpcStackName}-PrivateSubnetIdC
      Type: application
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Sub di-lb-access-logs-${AWS::AccountId}-${AWS::Region}
        - Key: access_logs.s3.prefix
          Value: !Sub sts-mock-spoke-${Environment}
        - Key: idle_timeout.timeout_seconds
          Value: 60
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Tags:
        - Key: FMSRegionalPolicy
          Value: false
        - Key: CustomPolicy
          Value: true
    Condition: DeploySpokeVpcResources

  LoadBalancerListenerTargetGroupECSSpoke:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: TRUE
      HealthCheckProtocol: HTTP
      HealthCheckPath: /healthcheck
      HealthCheckTimeoutSeconds: 2
      HealthCheckIntervalSeconds: 60
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200-499
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !ImportValue
        Fn::Sub: ${MigrationSpokeVpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
    Condition: DeploySpokeVpcResources

  LoadBalancerListenerSpoke:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECSSpoke
          Type: forward
      LoadBalancerArn: !Ref LoadBalancerSpoke
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Sub '{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}'
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
    Condition: DeploySpokeVpcResources

  LoadBalancerListenerBlockSystemRuleSpoke:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref LoadBalancerListenerSpoke
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values:
            - /system/*
      Actions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: "404"
            ContentType: text/plain
            MessageBody: Not Found
    Condition: DeploySpokeVpcResources

  # ************************************
  ApiGatewayHttpEndpoint:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: !Sub ${AWS::StackName}-${Environment}
      ProtocolType: HTTP

  # LEGACY API INTEGRATION - soon to be depracated
  ApiGatewayHttpEndpointIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref ApiGatewayHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId: !ImportValue
        Fn::Sub: ${LegacyVpcStackName}-VpcLinkId
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref LoadBalancerListener
      PayloadFormatVersion: "1.0"
      RequestParameters:
        overwrite:header.x-govuk-signin-source-ip: $context.identity.sourceIp
      TlsConfig:
        ServerNameToVerify: !Ref CustomDomain
    Condition: DeployLegacyVpcResources

  # SPOKE API INTEGRATION
  ApiGatewayHttpEndpointIntegrationSpoke:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref ApiGatewayHttpEndpoint
      IntegrationType: HTTP_PROXY
      ConnectionId: !ImportValue
        Fn::Sub: ${MigrationSpokeVpcStackName}-VpcLinkId
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref LoadBalancerListenerSpoke
      PayloadFormatVersion: "1.0"
      RequestParameters:
        overwrite:header.x-govuk-signin-source-ip: $context.identity.sourceIp
      TlsConfig:
        ServerNameToVerify: !Ref CustomDomain
    Condition: DeploySpokeVpcResources

  ApiGatewayRouteToken:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId: !Ref ApiGatewayHttpEndpoint
      RouteKey: POST /token
      Target: !Join
        - /
        - - integrations
          - !If
            - MigrateTrafficToSpokeVpc
            - !Ref ApiGatewayHttpEndpointIntegrationSpoke
            - !Ref ApiGatewayHttpEndpointIntegration

  ApiGatewayRouteHealthcheck:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId: !Ref ApiGatewayHttpEndpoint
      RouteKey: GET /healthcheck
      Target: !Join
        - /
        - - integrations
          - !If
            - MigrateTrafficToSpokeVpc
            - !Ref ApiGatewayHttpEndpointIntegrationSpoke
            - !Ref ApiGatewayHttpEndpointIntegration

  ApiStageDefault:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId: !Ref ApiGatewayHttpEndpoint
      StageName: $default
      AutoDeploy: true
      DefaultRouteSettings:
        DataTraceEnabled: false
        DetailedMetricsEnabled: true
        ThrottlingBurstLimit: 400
        ThrottlingRateLimit: 1200
      AccessLogSettings:
        DestinationArn: !GetAtt ApiGatewayAccessLogsGroup.Arn
        Format: '{ "requestId":"$context.requestId", "ip": "$context.identity.sourceIp", "requestTime":"$context.requestTime", "httpMethod":"$context.httpMethod", "path": "$context.path", "routeKey":"$context.routeKey", "status":"$context.status", "protocol":"$context.protocol", "responseLength":"$context.responseLength" }'

  CustomDomain:
    Type: AWS::ApiGatewayV2::DomainName
    Properties:
      DomainName: !If
        - StackNameIsWalletStsMock
        - !FindInMap
          - EnvironmentVariables
          - !Ref Environment
          - SelfUrl
        - !Sub
          - ${AWS::StackName}-${SelfUrl}
          - SelfUrl: !FindInMap
              - EnvironmentVariables
              - !Ref Environment
              - SelfUrl
      DomainNameConfigurations:
        - CertificateArn: !Sub '{{resolve:ssm:/${Environment}/Platform/ACM/PrimaryZoneWildcardCertificateARN}}'
          EndpointType: REGIONAL
          SecurityPolicy: TLS_1_2

  ApiRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Ref CustomDomain
      Type: A
      HostedZoneId: !Sub '{{resolve:ssm:/${Environment}/Platform/Route53/PrimaryZoneID}}'
      AliasTarget:
        DNSName: !GetAtt CustomDomain.RegionalDomainName
        HostedZoneId: !GetAtt CustomDomain.RegionalHostedZoneId
        EvaluateTargetHealth: false

  ApiMapping:
    Type: AWS::ApiGatewayV2::ApiMapping
    Properties:
      DomainName: !Ref CustomDomain
      ApiId: !Ref ApiGatewayHttpEndpoint
      Stage: !Ref ApiStageDefault

  # ECS
  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterSettings:
        - Name: containerInsights
          Value: enabled

  # LEGACY ECS - soon to be depracated
  EcsService:
    Type: AWS::ECS::Service
    DependsOn:
      - LoadBalancerListener
    Properties:
      Cluster: !Ref EcsCluster
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: TRUE
          Rollback: TRUE
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: app
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECS
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt EcsSecurityGroup.GroupId
          Subnets:
            - !ImportValue
              Fn::Sub: ${LegacyVpcStackName}-ProtectedSubnetIdA
            - !ImportValue
              Fn::Sub: ${LegacyVpcStackName}-ProtectedSubnetIdB
            - !ImportValue
              Fn::Sub: ${LegacyVpcStackName}-ProtectedSubnetIdC
      TaskDefinition: !Ref EcsServiceTaskDefinition
    Condition: DeployLegacyVpcResources

  # SPOKE ECS
  EcsServiceSpoke:
    Type: AWS::ECS::Service
    DependsOn:
      - LoadBalancerListenerSpoke
    Properties:
      Cluster: !Ref EcsCluster
      DeploymentConfiguration:
        DeploymentCircuitBreaker:
          Enable: TRUE
          Rollback: TRUE
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: app
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref LoadBalancerListenerTargetGroupECSSpoke
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt EcsSecurityGroupSpoke.GroupId
          Subnets:
            - !ImportValue
              Fn::Sub: ${MigrationSpokeVpcStackName}-ProtectedSubnetIdA
            - !ImportValue
              Fn::Sub: ${MigrationSpokeVpcStackName}-ProtectedSubnetIdB
            - !ImportValue
              Fn::Sub: ${MigrationSpokeVpcStackName}-ProtectedSubnetIdC
      TaskDefinition: !Ref EcsServiceTaskDefinition
    Condition: DeploySpokeVpcResources

  # *******************************
  EcsServiceTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true

          # Image is replaced by ./build-and-deploy-image.sh (manual dev deployment) or GitHub Actions (pipeline deployments).
          Image: CONTAINER-IMAGE-PLACEHOLDER
          Name: app
          Environment:
            - Name: IMPOSTER_FEATURES
              Value: metrics=false
            - Name: SELF_URL
              Value: !If
                - StackNameIsWalletStsMock
                - !Sub
                  - https://${SelfUrl}
                  - SelfUrl: !FindInMap
                      - EnvironmentVariables
                      - !Ref Environment
                      - SelfUrl
                - !Sub
                  - https://${AWS::StackName}-${SelfUrl}
                  - SelfUrl: !FindInMap
                      - EnvironmentVariables
                      - !Ref Environment
                      - SelfUrl
            - Name: CREDENTIAL_ISSUER_URL
              Value: !Sub
                - https://${CredentialIssuerUrl}
                - CredentialIssuerUrl: !FindInMap
                    - EnvironmentVariables
                    - !Ref Environment
                    - CredentialIssuerUrl
          PortMappings:
            - ContainerPort: !Ref ContainerPort
              Protocol: tcp
          ReadonlyRootFilesystem: true
          LinuxParameters:
            Tmpfs:
              - ContainerPath: /tmp
                Size: 128
                MountOptions:
                  - rw
                  - noexec
                  - nosuid
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref EcsAccessLogsGroup
              awslogs-region: !Sub ${AWS::Region}
              awslogs-stream-prefix: !Sub sts-mock-${Environment}
      Cpu: "1024"
      ExecutionRoleArn: !GetAtt EcsTaskExecutionRole.Arn
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !GetAtt EcsTaskRole.Arn

  EcsTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      Description: Allows ECS tasks to pull images from ECR and write logs
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Policies:
        - PolicyName: StsMockEcsTaskExecutionRolePolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ecr:BatchGetImage
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchCheckLayerAvailability
                Resource:
                  - !FindInMap
                    - EnvironmentVariables
                    - !Ref Environment
                    - StsMockImageRepositoryArn
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                Resource:
                  - '*'
              - Effect: Allow
                Action:
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource:
                  - !GetAtt EcsAccessLogsGroup.Arn
                  - !Sub ${EcsAccessLogsGroup.Arn}:*
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue

  EcsTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue

  STSMockHeartbeatAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Sub ${AWS::StackName}-STSMockHeartbeatAlarm
      AlarmDescription: 'STSMock-Heartbeat Synthetic-Canary Alarm: 2xx LessThanThreshold 1'
      MetricName: 2xx
      Namespace: CloudWatchSynthetics
      Dimensions:
        - Name: CanaryName
          Value: sts_mock_heartbeat
      Period: 60 # 1 minute in seconds
      EvaluationPeriods: 1
      Statistic: Sum
      ComparisonOperator: LessThanThreshold
      Threshold: 1.0
      TreatMissingData: ignore
      ActionsEnabled: true
      AlarmActions:
        - !ImportValue alarm-sns-topic-warning
      OKActions:
        - !ImportValue alarm-sns-topic-warning
    Condition: IsIntegration

Outputs:
  StsMockFriendlyUrl:
    Description: Friendly URL for the deployed STS mock service
    Value: !If
      - StackNameIsWalletStsMock
      - !FindInMap
        - EnvironmentVariables
        - !Ref Environment
        - SelfUrl
      - !Sub
        - ${AWS::StackName}-${SelfUrl}
        - SelfUrl: !FindInMap
            - EnvironmentVariables
            - !Ref Environment
            - SelfUrl
